create requests for base64 calculation

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
                   accept="image/*"
                   id="base64-form__file-input"
                   class="file-input"
+                  name="base64-form__file-input"
                   required
                 />
               </div>
@@ -380,7 +381,8 @@
     <footer class="footer">
       <h2 class="footer__text">All rights reserved!</h2>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/utils.js"></script>
     <script src="./scripts/hash.js"></script>
+    <script src="./scripts/base64.js"></script>
   </body>
 </html>
