create requests for base64 calculation

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </form>
           </div>
           <div class="base64-form__text-tab">
-            <form method="post" name="base64-form__text">
+            <form method="get" name="base64-form__text">
               <h3 class="form__subtitle">
                 Конвертировать Base64 в изображение
               </h3>
