create before-after image slider

--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
           <button class="submit-button" type="submit">
             Конвертировать файл
           </button>
+          <div class="slider-container">
+            <div class="before-after-slider">
+              <div class="before-img">
+                <img src="" alt="" class="slider-img" />
+              </div>
+              <div class="after-img">
+                <img src="" alt="" class="slider-img" />
+              </div>
+              <div class="resizer"></div>
+            </div>
+          </div>
         </form>
       </section>
       <section
@@ -405,5 +416,6 @@
     <script src="./scripts/base64.js"></script>
     <script src="./scripts/qr.js"></script>
     <script src="./scripts/dragdrop.js"></script>
+    <script src="./scripts/before-after slider.js"></script>
   </body>
 </html>
