fix: fixed image converter

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <h2 class="section__title">Генератор текста</h2>
         <form name="lorem-form">
           <label for="lorem-form__string-count" class="textarea__label"
-            >Введите количество строк текста</label
+            >Введите количество абзацев</label
           >
           <input
             type="number"
